# django-app-template

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dockerignore  init_env.py  manage.py  mypy.ini  mypy.py  pyproject.toml
core/: apps.py  tests.py  urls.py  views.py
core/static/core/css/: index.css
core/templates/core/: index.html
django_app_template/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
static/css/: style.css
static/js/: header.js
templates/: 404.html  base.html
templates/includes/: footer.html  header.html
