[tool.poetry]
name = "django-app-template"
version = "0.1.0"
description = ""
authors = ["Denis Tokarev <wf.denis.tokarev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
pillow = "^11.1.0"
django-debug-toolbar = "^5.0.1"
gunicorn = "^23.0.0"
mypy = "^1.15.0"
django-stubs = "^5.1.3"
redis = "^5.2.1"
hiredis = "^3.1.0"
celery = "^5.4.0"
flake8 = "^7.1.1"
isort = "^6.0.0"
black = "^25.1.0"
pre-commit = "^4.1.0"
django-csp = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
